--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav {
 
 main {
   width: 900px;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   margin: auto;
 }
 article {
@@ -50,3 +50,5 @@ footer {
 <article class="small">
 Article
 </article>
+body <div>
+background-image 
