--- a/style.css
+++ b/style.css
@@ -51,4 +51,7 @@ footer {
 Article
 </article>
 body <div>
-background-image 
+
+.element {
+  background-image: url('https://us.123rf.com/450wm/llepod/llepod1608/llepod160800052/61084056-seamless-texture-highway-asphalt-road-with-yellow-stripes-2d-illustration.jpg'); /* Set background image */
+}
